init design project

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="description" content="">
     <meta name="robots" content="noindex, nofollow">
 
-    <title>Design | *Site Name*</title>
+    <title>Design | Connor Contracting</title>
 
     <!-- Font Scripts -->
     <script defer type="text/javascript" src="js/fonts.js"></script>
-    
+
     <!-- FontAwesome Kit -->
     <script src="https://kit.fontawesome.com/1c0794db94.js" crossorigin="anonymous"></script>
 
@@ -36,30 +36,24 @@
 
                 <div class="logo">
                     <a href="index.html" class="force">
-                        <img src="https://eternityatom.com/images/atom_logo.svg" title="Return Home" alt="Logo">
+                        <img src="images/connor-contracting-logo.svg" title="Return Home" alt="Logo">
                     </a>
                 </div>
 
                 <nav class="nav" role="navigation" aria-label="Site Menu">
 
                     <ul>
-                        <li><a href="#">Link</a></li>
-                        <li class="trigger"><a href="#">Link <i class="fal fa-caret-down" aria-hidden="true"></i></a>
+                        <li class="trigger"><a href="#">Company <i class="fal fa-caret-down" aria-hidden="true"></i></a>
                             <ul class="drop">
-                                <li><a href="#">Link</a></li>
-                                <li><a href="#">Link</a></li>
-                                <li><a href="#">Link</a></li>
+                                <li><a href="#">Who We Are</a></li>
+                                <li><a href="#">What We Do</a></li>
+                                <li><a href="#">Where We Work</a></li>
+                                <li><a href="#">Staff</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Link</a></li>
-                        <li class="trigger">
-                            <a href="#">Link  <i class="fal fa-caret-down" aria-hidden="true"></i></a>
-                            <ul class="drop">
-                                <li><a href="#">Drop Link</a></li>
-                                <li><a href="#">Drop Link</a></li>
-                                <li><a href="#">Drop Link</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
 
@@ -76,10 +70,6 @@
                     <img src="https://via.placeholder.com/1200x400/4e4e4e/FFFFFF/?text=1" alt="">
                     <div class="info">
                         <h1 class="title">Clouds</h1>
-                        <p class="desc">Subtext</p>
-                        <div class="buttons">
-                            <a class="button">Button</a>
-                        </div>
                     </div>
                 </div>
 
@@ -87,60 +77,145 @@
                     <img src="https://via.placeholder.com/1200x400/4e4e4e/FFFFFF/?text=1" alt="">
                     <div class="info">
                         <h1 class="title">Clouds</h1>
-                        <p class="desc">Subtext</p>
-                        <div class="buttons">
-                            <a class="button">Button</a>
-                        </div>
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <section class="features">
+        <section class="introduction">
             <div class="container">
                 <div class="group">
+                    <div class="image">
 
-                    <a href="#" class="item">
-                        <div class="image">
-                            <img src="https://via.placeholder.com/400x300/4e4e4e/FFFFFF/?text=1" alt="">
+                    </div>
+                    <div class="text">
+                        <p class="sup">WE ARE</p>
+                        <h1 class="title">Connor Contracting</h1>
+                        <div class="desc">
+                            <p>We have the size and resources necessary to successfully complete multimillion dollar commercial and industrial construction projects, however we are also small enough to ensure the direct personal involvement of one of our owners every step of the way.</p>
                         </div>
-                        <div class="bar">
-                            <h3 class="title">Feature #1</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="item">
-                        <div class="image">
-                            <img src="https://via.placeholder.com/400x300/4e4e4e/FFFFFF/?text=2" alt="">
-                        </div>
-                        <div class="bar">
-                            <h3 class="title">Feature #2</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="item">
-                        <div class="image">
-                            <img src="https://via.placeholder.com/400x300/4e4e4e/FFFFFF/?text=3" alt="">
-                        </div>
-                        <div class="bar">
-                            <h3 class="title">Feature #3</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</p>
-                        </div>
-                    </a>
-
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="introduction">
+        <section class="projects projects-widget">
             <div class="container">
+                <h2>Our Projects</h2>
+                <div class="group">
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="#">
+                            <div class="image">
+                                <img src="images/projects/p1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                                <p class="date">2020</p>
+                                <h3 class="title">Project Title</h3>
+                                <div class="arrow">
+                                    <i class="fal fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                <h1>Design</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate <a href="#">doloremque</a> beatae, fugiat, fuga possimus velit et dolorem. Esse reiciendis dolor corrupti. Optio non neque quas dolorum velit, sit vero esse ratione voluptate dignissimos eos nisi cumque cum hic ipsam consectetur eveniet reprehenderit. Enim perspiciatis, quasi ratione iste! Rerum, molestiae unde.</p>
+        <section class="team">
+            <div class="container">
+                <div class="image">
+                    <img src="" alt="">
+                </div>
+                <div class="text">
+                    <h2 class="title">Our Team</h2>
+                </div>
+            </div>
+        </section>
 
+        <section class="testimonials">
+            <div class="container">
+                <div class="group">
+                    <div class="testimonial">
+                        <div class="quote">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dolor impedit aut odio corrupti fuga eveniet natus necessitatibus, nulla ducimus temporibus doloribus unde numquam omnis quibusdam aperiam officia. Ducimus, accusantium.
+                        </div>
+                        <div class="quotee">
+                            <h3 class="name">John Doe</h3>
+                            <p class="descriptor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, quos.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -168,7 +243,7 @@
             <div class="contact">
                 <a href="#">(000) 000-0000</a> | <a href="#">info@eternitymarketing.com</a>
             </div>
-            <div class="copyright" role="contentinfo">&copy; 2019 *Site Name* | All Rights Reserved</div>
+            <div class="copyright" role="contentinfo">&copy; 2019 Connor Contracting | All Rights Reserved</div>
             <div class="ewd">
                 <a href="https://eternitywebdev.com/" target="_blank">
                     <img src="images/website_by_eternity.svg" alt="Website By Eternity">
