--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                     </div>
                 </div>
             </div>
+            <div class="buttons buttons-center">
+                <a href="#" class="button"><span>View more projects</span><i class="fal fa-arrow-right"></i></a>
+            </div>
         </section>
 
         <section class="team">
