added intro photo + styling to misc

--- a/index.html
+++ b/index.html
@@ -87,13 +87,17 @@
             <div class="container">
                 <div class="group">
                     <div class="image">
-
+                        <img src="images/intro-photo.jpg" alt="">
                     </div>
                     <div class="text">
                         <p class="sup">WE ARE</p>
                         <h1 class="title">Connor Contracting</h1>
                         <div class="desc">
                             <p>We have the size and resources necessary to successfully complete multimillion dollar commercial and industrial construction projects, however we are also small enough to ensure the direct personal involvement of one of our owners every step of the way.</p>
+                            <br>
+                            <div class="buttons">
+                                <a href="#" class="button">More about us</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +195,7 @@
                 </div>
             </div>
             <div class="buttons buttons-center">
-                <a href="#" class="button"><span>View more projects</span><i class="fal fa-arrow-right"></i></a>
+                <a href="#" class="button"><span>Explore all projects</span><i class="fal fa-arrow-right"></i></a>
             </div>
         </section>
 
