--- a/index.html
+++ b/index.html
@@ -63,21 +63,15 @@
 
     <main role="main">
 
-        <section class="slideshow slick-arrows">
+        <section class="carousel slick-arrows">
             <div class="container">
 
                 <div class="slide">
-                    <img src="https://via.placeholder.com/1200x400/4e4e4e/FFFFFF/?text=1" alt="">
-                    <div class="info">
-                        <h1 class="title">Clouds</h1>
-                    </div>
+                    <img src="images/slide-01.jpg" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="https://via.placeholder.com/1200x400/4e4e4e/FFFFFF/?text=1" alt="">
-                    <div class="info">
-                        <h1 class="title">Clouds</h1>
-                    </div>
+                    <img src="images/slide-02.jpg" alt="">
                 </div>
 
             </div>
@@ -93,7 +87,7 @@
                         <p class="sup">WE ARE</p>
                         <h1 class="title">Connor Contracting</h1>
                         <div class="desc">
-                            <p>We have the size and resources necessary to successfully complete multimillion dollar commercial and industrial construction projects, however we are also small enough to ensure the direct personal involvement of one of our owners every step of the way.</p>
+                            <p>Our expertise includes commercial, industrial, institutional, and historic preservation projects with General Contract, Design-Build, and Construction Management formats. Every phase of every project at Connor Contracting, Inc. is handled professionally and efficiently by our dedicated staff. From our experienced office staff to our carpenters in the field to our seasoned project management teams, every employee shares the owners' passion to deliver quality results.</p>
                             <br>
                             <div class="buttons">
                                 <a href="#" class="button">More about us</a>
@@ -106,7 +100,12 @@
 
         <section class="projects projects-widget">
             <div class="container">
-                <h2>Our Projects</h2>
+                <div class="section-heading">
+                    <h2>Our Projects</h2>
+                    <p class="intro">
+                        Connor Contracting has the size and resources necessary to successfully complete multimillion dollar commercial and industrial construction projects, however we are also small enough to ensure the direct personal involvement of one of our owners every step of the way.
+                    </p>
+                </div>
                 <div class="group">
                     <div class="project-item">
                         <a href="#">
@@ -115,7 +114,7 @@
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">Dubois</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -125,11 +124,11 @@
                     <div class="project-item">
                         <a href="#">
                             <div class="image">
-                                <img src="images/projects/p1.jpg" alt="">
+                                <img src="images/projects/p2.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">WCMH Garage</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -139,11 +138,11 @@
                     <div class="project-item">
                         <a href="#">
                             <div class="image">
-                                <img src="images/projects/p1.jpg" alt="">
+                                <img src="images/projects/p3.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">Dubois</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -153,11 +152,11 @@
                     <div class="project-item">
                         <a href="#">
                             <div class="image">
-                                <img src="images/projects/p1.jpg" alt="">
+                                <img src="images/projects/p4.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">Lajeunesse</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -167,11 +166,11 @@
                     <div class="project-item">
                         <a href="#">
                             <div class="image">
-                                <img src="images/projects/p1.jpg" alt="">
+                                <img src="images/projects/p5.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">VCFA Alumni Hall</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -181,11 +180,11 @@
                     <div class="project-item">
                         <a href="#">
                             <div class="image">
-                                <img src="images/projects/p1.jpg" alt="">
+                                <img src="images/projects/p6.jpg" alt="">
                             </div>
                             <div class="info">
                                 <p class="date">2020</p>
-                                <h3 class="title">Project Title</h3>
+                                <h3 class="title">VCFA Crowley</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
                                 </div>
@@ -201,18 +200,75 @@
 
         <section class="team">
             <div class="container">
-                <div class="image">
-                    <img src="" alt="">
+                <div class="section-heading">
+                    <h2>Our Team</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste accusamus dolore ut nam cum iure.</p>
                 </div>
-                <div class="text">
-                    <h2 class="title">Our Team</h2>
+                <div class="group">
+                    <div class="team-item">
+                        <div class="cover">
+                            <img src="images/team/FredConnor.JPG" alt="">
+                        </div>
+                        <div class="info">
+                            <h3 class="name">Fred Connor</h3>
+                            <p class="position">Partner</p>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="cover">
+                            <img src="images/team/johnconnor.JPG" alt="">
+                        </div>
+                        <div class="info">
+                            <h3 class="name">John Connor</h3>
+                            <p class="position">Partner</p>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="cover">
+                            <img src="images/team/MikeConnor.JPG" alt="">
+                        </div>
+                        <div class="info">
+                            <h3 class="name">Michael Connor</h3>
+                            <p class="position">Partner</p>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="cover">
+                            <img src="images/team/StephenConnor.JPG" alt="">
+                        </div>
+                        <div class="info">
+                            <h3 class="name">Stephen Connor</h3>
+                            <p class="position">Partner</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="buttons buttons-center">
+                    <a href="#" class="button">See the full team</a>
                 </div>
             </div>
         </section>
 
-        <section class="testimonials">
+        <!-- <section class="testimonials testimonials-widget">
             <div class="container">
-                <div class="group">
+                <div class="group testimonial-slider slick-arrows">
+                    <div class="testimonial">
+                        <div class="quote">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dolor impedit aut odio corrupti fuga eveniet natus necessitatibus, nulla ducimus temporibus doloribus unde numquam omnis quibusdam aperiam officia. Ducimus, accusantium.
+                        </div>
+                        <div class="quotee">
+                            <h3 class="name">John Doe</h3>
+                            <p class="descriptor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, quos.</p>
+                        </div>
+                    </div>
+                    <div class="testimonial">
+                        <div class="quote">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dolor impedit aut odio corrupti fuga eveniet natus necessitatibus, nulla ducimus temporibus doloribus unde numquam omnis quibusdam aperiam officia. Ducimus, accusantium.
+                        </div>
+                        <div class="quotee">
+                            <h3 class="name">John Doe</h3>
+                            <p class="descriptor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, quos.</p>
+                        </div>
+                    </div>
                     <div class="testimonial">
                         <div class="quote">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dolor impedit aut odio corrupti fuga eveniet natus necessitatibus, nulla ducimus temporibus doloribus unde numquam omnis quibusdam aperiam officia. Ducimus, accusantium.
@@ -224,37 +280,87 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section class="instagram">
+        <!-- <section class="instagram">
             <div class="container">
                 <h2 class="heading">Instagram Feed</h2>
                 <script src="https://apps.elfsight.com/p/platform.js" defer async></script>
                 <div class="elfsight-app-2e580992-8c92-4eca-a1cb-5d82031ec9cb"></div>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
-    <footer class="footer" role="contentinfo">
+    <footer class="footer">
         <div class="container">
-            <div class="social-icons">
-                <a href="#" target="_blank" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" title="Follow us on Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" title="Follow us on Pinterest"><i class="fab fa-pinterest-p"></i></a>
-                <a href="#" target="_blank" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#" target="_blank" title="Follow us on YouTube"><i class="fab fa-youtube"></i></a>
+            <div class="group">
+                <div class="logo">
+                    <a href="index.html" class="force">
+                        <img src="images/connor-contracting-logo.svg" title="Return Home" alt="Logo">
+                    </a>
+                </div>
+                <div class="links">
+                    <div class="group">
+                        <div class="section">
+                            <h3 class="label">Projects</h3>
+                            <ul>
+                                <li><a href="#">Project #1</a></li>
+                                <li><a href="#">Project #2</a></li>
+                                <li><a href="#">Project #3</a></li>
+                                <li><a href="#">All projects</a></li>
+                            </ul>
+                        </div>
+                        <div class="section">
+                            <h3 class="label">Company</h3>
+                            <ul>
+                                <li><a href="#">Who We Are</a></li>
+                                <li><a href="#">What We Do</a></li>
+                                <li><a href="#">Where We Work</a></li>
+                                <li><a href="#">Staff</a></li>
+                            </ul>
+                        </div>
+                        <div class="section">
+                            <h3 class="label">News</h3>
+                            <ul>
+                                <li><a href="#">Post #1</a></li>
+                                <li><a href="#">Post #2</a></li>
+                                <li><a href="#">Post #3</a></li>
+                                <li><a href="#">All blog posts</a></li>
+                            </ul>
+                        </div>
+                        <div class="section">
+                            <h3 class="label">St. Albans</h3>
+                            <ul>
+                                <li><a href="#">802-527-1955</a></li>
+                                <li><a href="#">stalbans@connorcontractinginc.com</a></li>
+                            </ul>
+                            <h3 class="label">Berlin</h3>
+                            <ul>
+                                <li><a href="#">802-223-3843</a></li>
+                                <li><a href="#">berlin@connorcontractinginc.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="address">182 Main Street | Burlington, Vermont 05401</div>
-            <div class="contact">
-                <a href="#">(000) 000-0000</a> | <a href="#">info@eternitymarketing.com</a>
-            </div>
-            <div class="copyright" role="contentinfo">&copy; 2019 Connor Contracting | All Rights Reserved</div>
-            <div class="ewd">
-                <a href="https://eternitywebdev.com/" target="_blank">
-                    <img src="images/website_by_eternity.svg" alt="Website By Eternity">
-                </a>
+            <div class="group">
+                <div class="logo">
+                    <div class="ewd">
+                        <a href="https://eternitywebdev.com/" target="_blank">
+                            <img src="https://eternityatom.com/images/website_by_eternity.svg" alt="Website By Eternity">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="social-icons">
+                    <a href="#" target="_blank" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" target="_blank" title="Follow us on Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank" title="Follow us on Pinterest"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="#" target="_blank" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" target="_blank" title="Follow us on YouTube"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
