--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                         <p class="sup">WE ARE</p>
                         <h1 class="title">Connor Contracting</h1>
                         <div class="desc">
-                            <p>Our expertise includes commercial, industrial, institutional, and historic preservation projects with General Contract, Design-Build, and Construction Management formats. Every phase of every project at Connor Contracting, Inc. is handled professionally and efficiently by our dedicated staff. From our experienced office staff to our carpenters in the field to our seasoned project management teams, every employee shares the owners' passion to deliver quality results.</p>
+                            <p>At Connor Contracting, Inc., we are focused on achieving complete customer satisfaction.</p>
+                            <p>Our team of construction professionals is dedicated to working together with our customers, subcontractors and vendors on all project components.  We strive to closely monitor your schedule, maintain a safe work site, and work on a daily basis to ensure that your project is completed on time and within budget.</p>
+                            <p>That is our promise to you – the customer.</p>
                             <br>
                             <div class="buttons">
                                 <a href="#" class="button">More about us</a>
