--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                                 <li><a href="#">Staff</a></li>
                             </ul>
                         </li>
+                        <li><a href="#">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">News</a></li>
                         <li><a href="#">Contact Us</a></li>
@@ -115,7 +116,7 @@
                                 <img src="images/projects/p1.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Healthcare</p>
                                 <h3 class="title">Dubois</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -129,7 +130,7 @@
                                 <img src="images/projects/p2.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Commercial</p>
                                 <h3 class="title">WCMH Garage</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -143,7 +144,7 @@
                                 <img src="images/projects/p3.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Residential</p>
                                 <h3 class="title">Dubois</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -157,7 +158,7 @@
                                 <img src="images/projects/p4.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Commercial</p>
                                 <h3 class="title">Lajeunesse</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -171,7 +172,7 @@
                                 <img src="images/projects/p5.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Healthcare</p>
                                 <h3 class="title">VCFA Alumni Hall</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -185,7 +186,7 @@
                                 <img src="images/projects/p6.jpg" alt="">
                             </div>
                             <div class="info">
-                                <p class="date">2020</p>
+                                <p class="category">Commercial</p>
                                 <h3 class="title">VCFA Crowley</h3>
                                 <div class="arrow">
                                     <i class="fal fa-arrow-right"></i>
@@ -200,7 +201,38 @@
             </div>
         </section>
 
-        <section class="team">
+        <section class="features">
+            <div class="container">
+                <div class="group">
+                    <a href="" class="item">
+                        <div class="cover">
+                            <img src="images/" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="title">News</h3>
+                        </div>
+                    </a>
+                    <a href="" class="item">
+                        <div class="cover">
+                            <img src="images/" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="title">Services</h3>
+                        </div>
+                    </a>
+                    <a href="" class="item">
+                        <div class="cover">
+                            <img src="images/" alt="">
+                        </div>
+                        <div class="text">
+                            <h3 class="title">Staff</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section class="team">
             <div class="container">
                 <div class="section-heading">
                     <h2>Our Team</h2>
@@ -248,7 +280,7 @@
                     <a href="#" class="button">See the full team</a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- <section class="testimonials testimonials-widget">
             <div class="container">
@@ -332,15 +364,15 @@
                             </ul>
                         </div>
                         <div class="section">
-                            <h3 class="label">St. Albans</h3>
-                            <ul>
-                                <li><a href="#">802-527-1955</a></li>
-                                <li><a href="#">stalbans@connorcontractinginc.com</a></li>
-                            </ul>
                             <h3 class="label">Berlin</h3>
                             <ul>
                                 <li><a href="#">802-223-3843</a></li>
                                 <li><a href="#">berlin@connorcontractinginc.com</a></li>
+                            </ul>
+                            <h3 class="label">St. Albans</h3>
+                            <ul>
+                                <li><a href="#">802-527-1955</a></li>
+                                <li><a href="#">stalbans@connorcontractinginc.com</a></li>
                             </ul>
                         </div>
                     </div>
