--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
                                 <li><a href="#">802-223-3843</a></li>
                                 <li><a href="#">berlin@connorcontractinginc.com</a></li>
                             </ul>
+                            <hr class="line">
                             <h3 class="label">St. Albans</h3>
                             <ul>
                                 <li><a href="#">802-527-1955</a></li>
