--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <nav class="nav" role="navigation" aria-label="Site Menu">
 
                     <ul>
-                        <li class="trigger"><a href="#">Company <i class="fal fa-caret-down" aria-hidden="true"></i></a>
+                        <li class="trigger"><a href="#">Company <i class="fas fa-caret-down" aria-hidden="true"></i></a>
                             <ul class="drop">
                                 <li><a href="#">Who We Are</a></li>
                                 <li><a href="#">What We Do</a></li>
@@ -204,27 +204,27 @@
         <section class="features">
             <div class="container">
                 <div class="group">
-                    <a href="" class="item">
+                    <a href="#" class="item">
                         <div class="cover">
-                            <img src="images/" alt="">
+                            <img src="images/news.jpg" alt="">
                         </div>
-                        <div class="text">
+                        <div class="info">
                             <h3 class="title">News</h3>
                         </div>
                     </a>
-                    <a href="" class="item">
+                    <a href="#" class="item">
                         <div class="cover">
-                            <img src="images/" alt="">
+                            <img src="images/services.jpg" alt="">
                         </div>
-                        <div class="text">
+                        <div class="info">
                             <h3 class="title">Services</h3>
                         </div>
                     </a>
-                    <a href="" class="item">
+                    <a href="#" class="item">
                         <div class="cover">
-                            <img src="images/" alt="">
+                            <img src="images/staff.jpg" alt="">
                         </div>
-                        <div class="text">
+                        <div class="info">
                             <h3 class="title">Staff</h3>
                         </div>
                     </a>
@@ -374,7 +374,7 @@
                 <div class="logo">
                     <div class="ewd">
                         <a href="https://eternitywebdev.com/" target="_blank">
-                            <img src="https://eternityatom.com/images/website_by_eternity.svg" alt="Website By Eternity">
+                            <img src="images/ewd.svg" alt="Website By Eternity">
                         </a>
                     </div>
                 </div>
